--- a/src/Index.css
+++ b/src/Index.css
@@ -5,46 +5,51 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(50, 50, 50);
 }
 
 .input {
-  position: relative;
+ 
   width: 250px;
   margin: 20px auto;
 }
 
 .input input {
+  
   width: 100%;
-  font-size: 30px;
-  z-index: 2;
-  padding-left: 5px;
+  font-size: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif3;
+    border-radius: 10px;
+    padding: 5px;
+    
 }
 
-.input label {
-  position: absolute;
-  left: 7px;
-  top: 0;
-  bottom: 0;
-  font-size: 30px;
-  opacity: 0.3;
-  z-index: 1;
-  user-select: none;
-  display: flex;
-  align-items: center;
-}
+
 .app {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   padding: 20px;
   max-width: 600px;
   margin: 0 auto;
 }
+.app ul {
+margin: auto;
+}
 .app h1 {
-  font-size: 2rem;
-  color: #1e3a8a; /* رنگ متن */
-  margin-bottom: 20px;
+  font-size: 3rem;
+  color: #ffffff;
+  margin: auto;
+  text-align: center;
+}
+
+.suggestions{
+  width: 100%;
+  padding: 5px;
+  margin: 5px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 5px;
+  color: #ffffff;
+  list-style-type: none;
+  text-align: center;
 }
